WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286819
[visionOS] Web process hangs under createDragImageFor{Link|Selection} when starting a drag for the first time
https://bugs.webkit.org/show_bug.cgi?id=286819
Summary
[visionOS] Web process hangs under createDragImageFor{Link|Selection} when st...
Wenson Hsieh
Reported
2025-01-31 12:22:29 PST
rdar://141448897
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-02-01 18:14:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39867
EWS
Comment 2
2025-02-03 10:17:09 PST
Committed
289740@main
(75ce30b7aa91): <
https://commits.webkit.org/289740@main
> Reviewed commits have been landed. Closing PR #39867 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug